--- a/Styles/cards.css
+++ b/Styles/cards.css
@@ -18,35 +18,43 @@
   margin: 0.5vw;
   margin-left: 0.5vw;
   z-index: 0;
-
+overflow: hidden;
   background: linear-gradient(left rgba(54, 54, 54, 0.1), rgba(112, 112, 112, 0.2));
   height: auto;
+}
+
+.main a, .project-a, #right, #left{
+  max-height: inherit;
+
 }
 
 .wrap{
   cursor: pointer;
   transition: all 500ms ease-out;
-  padding: 2vw;
-  margin: 2vw;
+  padding: 1vw;
+  margin: 1vw;
   display: flex;
   background: transparent;
-  height: auto;
+  height: fit-content;
   width: auto;
   overflow:hidden;
 }
 
 .container {
   align-self: center;
-  width: 100%;
-  height: 100vw;
+  width: 75vw;
+  height: fit-content;
   display: flex;
   align-items: center;
   font-size: 1.2rem;
   text-align:center; 
   flex-direction: row;
   background: transparent;
+  overflow:hidden;
 }
-
+.flex-column{
+  height:max-content;
+}
 .card {
   align-self: center;
   float: left;
@@ -125,7 +133,7 @@
   object-fit: cover;
   background-position: center;
   background-size: 100%;
-  background-image:url('');
+  background-image:url('../images/Stats.jpg');
 }
 
 /*  mobile */
@@ -138,13 +146,13 @@
   padding: 1vw;
 }
 #left {
-  height: 100%;
+  height: fit-content;
   margin: 0;
   padding: 0;
 }
   
 #right {
-  height: 100%;
+  height: fit-content;
   margin: 0;
   padding: 0;
 }
@@ -233,8 +241,8 @@
   }
 
   @keyframes slide {
-    from{transform:translateX(-0.3rem);}
-    to{transform: translateX(0.3rem);}
+    from{transform:translateX(-0.1rem);}
+    to{transform: translateX(0.1rem);}
     }
     
   #left {
