--- a/Styles/load.css
+++ b/Styles/load.css
@@ -1,35 +1,44 @@
 .loader-container{
     width: 100%;
     height: 100vh;
-    background-color: #111;
+    background-color: rgb(5, 7, 34);
     position: fixed;
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 100;
+    align-content: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
 }
-
+.loader-container h1{
+    padding: 20px;
+    animation: text 1s infinite alternate-reverse;
+}
 .loader{
-    width: 50px;
-    height: 50px;
-    border: 5px solid;
-    color: #3498db;
+    width: 75px;
+    height: 75px;
+box-shadow:0 0 1vw rgb(79, 90, 253), inset 0 0 1vw black, inset 0 0 0.5vw black, inset 1vw 0 0.5vw rgba(0, 0, 0, 0.479),inset 1vw 0 2vw blue, 10vw 0 1vw white;
     border-radius: 50%;
     border-top-color: transparent;
-    animation: loader 1.2s linear infinite;
+    animation: loader 2s linear infinite;
+    background-color: blue;
 }
 
 @keyframes loader{
-    25%{
-        color: #2ecc71;
-    }
-    50%{
-        color: #f1c40f;
-    }
-    75%{
-        color: #e74c3c;
-    }
+
     to{
         transform: rotate(360deg);
+    }
+}
+
+@keyframes text {
+    from{
+        color: white;
+        transform:scale(100%);
+    }
+    to{
+        color: royalblue;
+        transform:scale(50%);
     }
 }
