--- a/Styles/load.css
+++ b/Styles/load.css
@@ -19,6 +19,32 @@ align-items: center;
 justify-content: center;
 }
 
+
+#preloader{
+    transition:1s ease;
+}
+
+#welcome{
+    display: block;
+    position: fixed;
+    min-width: 100vw;
+    min-height: 100vh;
+    background-color: rgb(62, 131, 223);
+    color: white;
+    z-index: 100;
+    text-align: center ;
+    text-justify: center;
+    animation: welcome 2s forwards;
+    animation-delay: 500ms ;
+}
+#welcome h1{
+    font-size: 14vw;
+    color: rgb(48, 141, 228);
+    
+    text-align: center ;
+    text-justify: center;
+}
+
 .loader-container{
     width: 100%;
     height: 100vh;
@@ -39,6 +65,7 @@ justify-content: center;
     position: fixed;
 }
 .loader{
+    transition:1s ease;
     width: 100px;
     height: 100px;
 box-shadow:0 0 0.5vw rgb(0, 0, 0), 0 0 2vw rgba(2, 6, 70, 0.7), inset 1vw 0 0.8vw rgba(0, 0, 0, 0.700), 10vw 0 0.8vw white;
@@ -53,5 +80,11 @@ box-shadow:0 0 0.5vw rgb(0, 0, 0), 0 0 2vw rgba(2, 6, 70, 0.7), inset 1vw 0 0.8v
 
     to{
         transform: rotate(360deg);
+    }
+}
+
+@keyframes welcome{
+    to{
+        opacity: 0;
     }
 }
