--- a/Styles/load.css
+++ b/Styles/load.css
@@ -6,8 +6,8 @@
     display: flex;
     align-self: center;
     justify-self: left;
-    box-shadow: 1vw 0 0.1vw rgb(255, 255, 255), 1vw 0 0.2vw blue, inset 4px 0 4px royalblue;
-    background: rgba(0, 174, 255, 0.7);
+    box-shadow: 1vw 0 0.1vw rgb(255, 255, 255);
+   
 position: fixed;
 top: 1vw;
 left: 1.5vw;
@@ -34,8 +34,10 @@ justify-self: left;
     position: fixed;
     min-width: 100vw;
     min-height: 100vh;
-    background-color: rgb(62, 131, 223);
-    color: white;
+    background-color: rgba(26, 50, 87, 0.9);
+    -webkit-text-stroke-color: white;
+    -webkit-text-stroke-width: 2px;
+    color: transparent;
     z-index: 100;
     text-align: center ;
     text-justify: center;
@@ -45,18 +47,17 @@ justify-self: left;
 }
 #welcome h1{
     font-size: 14vw;
-    color: rgb(249, 251, 253);
-    text-shadow:0 0 5px rgb(255, 255, 255);
+    font-family: 'Roboto Slab', serif;
+    color: transparent;
     text-align: center ;
     text-justify: center;
-    -webkit-text-stroke-width: 5px;
-    -webkit-text-stroke-color: rgba(0, 118, 228, 0.849);
+ 
 }
 
 .loader-container{
     width: 100%;
     height: 100vh;
-    background-color: rgb(62, 131, 223);
+    background-color: rgb(0, 6, 14);
     position: fixed;
     display: flex;
     align-items: center;
@@ -80,14 +81,12 @@ box-shadow:0 0 0.5vw rgb(0, 0, 0), 0 0 2vw rgba(2, 6, 70, 0.7), inset 1vw 0 0.8v
     border-radius: 50%;
     border-top-color: transparent;
     animation: loader 2s linear infinite;
-    background-color: rgb(128, 0, 248);
+    background-color: rgb(0, 95, 219);
    
 }
 
 @keyframes loader{
-0%{background-color: rgb(4, 0, 248);}
-50%{background-color: rgb(0, 170, 248);}
-100%{background-color: rgb(4, 0, 248);}
+
     to{
         
         transform: rotate(360deg);
