--- a/Styles/load.css
+++ b/Styles/load.css
@@ -40,29 +40,9 @@ justify-self: left;
     position: fixed;
     min-width: 100vw;
     min-height: 100vh;
-    background-color: rgba(26, 50, 87);
-    -webkit-text-stroke-color: white;
-    -webkit-text-stroke-width: 2px;
-    color: transparent;
+    background-color: rgb(0, 6, 14);
     z-index: 100;
-    text-align: center ;
-    text-justify: center;
-    animation: welcome 3s forwards;
-    animation-delay: 1s ;
-    padding: 25vh 0;
-}
-#welcome h1{
-    font-size: 14vw;
-    font-family: 'Roboto Slab', serif;
-    color: transparent;
-    text-align: center ;
-    text-justify: center;
- animation: slider 2s forwards;
- animation-delay: 1s;
-}
-
-@keyframes slider {
-    to{transform: translate(0, -100vw);}
+    animation: welcome 2s forwards;
 }
 
 .loader-container{
